# analytics-mcp

./: .gitignore  README.md  pyproject.toml
analytics_mcp/: _clients.py  auth.py  errors.py  server.py
analytics_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
analytics_mcp/tools/: _helpers.py
analytics_mcp/tools/ga/: accounts.py  metadata.py  realtime.py  reports.py
analytics_mcp/tools/gsc/: properties.py  search_analytics.py  sitemaps.py  url_inspection.py
tests/: conftest.py  test_auth.py  test_helpers.py  test_server.py
